cabal-version:      3.0
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: 

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Cristóvão Morgado
maintainer:         cristovao.morgado@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      TraceV1,
      TraceV2,
      YacadaNFTV1,
      YacadaNFTV2,
      YacadaCoinV1,
      YacadaCoinV2,
      Common.UtilsV1,
      Common.UtilsV2
    build-depends:
      base ^>=4.14.1.0,
      aeson -any,
      data-default -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      cardano-api >= 1.35 ,
      serialise,
      hex

     
    hs-source-dirs: src 

--6test-suite plutus-example-projects-test
--6  import: lang
--6  type: exitcode-stdio-1.0
--6  main-is: Spec.hs
--6  hs-source-dirs: examples/test
--6  other-modules:
--6    Spec.Game
--6  build-depends:
--6    plutus-tx -any,
--6    plutus-tx-plugin,
--6    plutus-contract -any,
--6    plutus-pab -any,
--6    plutus-ledger -any,
--6    plutus-starter -any
--6  build-depends:
--6    base >=4.9 && <5,
--6    tasty -any,
--6    tasty-hunit -any,
--6    text -any,
--6    tasty-hedgehog >=0.2.0.0


--executable plutus-starter-pab
--  import: lang
--  main-is: Main.hs
--  hs-source-dirs: pab
--  ghc-options:
--    -threaded
--  build-depends:
--    base >= 4.9 && < 5,
--    data-default -any,
--    plutus-contract -any,
--    plutus-pab -any,
--    plutus-starter -any,
--    aeson -any,
--    freer-simple -any,
--    prettyprinter -any,
--    freer-extras -any,
--    plutus-ledger -any,
--    openapi3 -any,
