cabal-version:      3.0
name:               YacadaCommunity
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: 

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Cristóvão Morgado
maintainer:         cristovao.morgado@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      TraceV1,
      TraceV2,
      YacadaNFTV1,
      YacadaNFTV2,
      YacadaCoinV1,
      YacadaCoinV2,
      Common.UtilsV1,
      Common.UtilsV2,
      Common.TypesV1,
      Common.Compiler,
      Common.Utils
    build-depends:
      base ^>=4.14.1.0,
      aeson -any,
      data-default -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      cardano-api >= 1.35 ,
      serialise,
      hex

     
    hs-source-dirs: src 
